compiler/tests/fixtures/type_err/map_key_mismatch.yb
pub main() -> Int {
  mixed := {"a": 1, 2: 3}
  mixed.len()
}
